etc/k8s/activemq-artemis-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: activemq-artemis
spec:
  finalizers:
  - kubernetes
