etc/k8s/stomp-test-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stomp-test
spec:
  finalizers:
  - kubernetes
