etc/k8s/wildfly-arquillian-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wildfly-arquillian
  name: wildfly-arquillian
  namespace: stomp-test
spec:
  replicas: 0
  minReadySeconds: 15
  selector:
    matchLabels:
      deployment: wildfly-arquillian
      app: wildfly-arquillian
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: wildfly-arquillian
        app: wildfly-arquillian
    spec:
      serviceAccountName: jgroups-kubeping-service-account
      containers:
      - name: wildfly-arquillian
        image: registry.x1/j7beck/x1-wildfly-stomp-test-it:1.10
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1024Mi"
          requests:
            memory: "768Mi"
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        volumeMounts:
        - name: log
          mountPath: /srv/wildfly/log
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 9990
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 9990
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: log
        emptyDir: {}
