etc/k8s/activemq-artemis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: activemq-artemis
  name: activemq-artemis
  namespace: stomp-test
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8161
    protocol: TCP
    targetPort: 8161
  - name: core
    port: 61616
    protocol: TCP
    targetPort: 61616
  - name: hornetq
    port: 5445
    protocol: TCP
    targetPort: 5445
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: mqtt
    port: 1883
    protocol: TCP
    targetPort: 1883
  - name: stomp
    port: 61613
    protocol: TCP
    targetPort: 61613
  selector:
    name: activemq-artemis
