etc/k8s/postgresql-service-external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql-persistent
  name: postgresql
  namespace: stomp-test
spec:
  # External Database Server
  type: ExternalName
  externalName: db.x1
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
