etc/k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgresql-persistent
  name: postgresql
  namespace: stomp-test
spec:
  # Internal Database Server
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  - name: metrics
    port: 9104
    protocol: TCP
    targetPort: 9104
  selector:
    name: postgresql
