etc/k8s/stomp-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stomp-test-ingress
  namespace: stomp-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 40m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    #nginx.ingress.kubernetes.io/enable-cors: 'true'
    cert-manager.io/cluster-issuer: x1-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - stomp-test.k8s.x1
    secretName: pki-wildfly-secret
  rules:
  - host: stomp-test.k8s.x1
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wildfly
            port:
              name: https
